[tool.poetry]
name = "github-issue-bot"
version = "0.1.0"
description = "Lookup issue titles from issue identifiers on IRC"
authors = ["Martin Weinelt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
irc3 = "^1.1.7"
aiohttp = "^3.8.1"
typer = "^0.4.0"
click = "<8.1.0"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[tool.poetry.scripts]
github-issue-bot = "github_issue_bot.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
